Fix alignment of the submit buttons on both login and register forms

--- a/src/sass/check-in.scss
+++ b/src/sass/check-in.scss
@@ -18,7 +18,6 @@
 
     &__buttons {
         width: 100%;
-        padding-top: 30px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -29,6 +28,12 @@
         flex-direction: column;
         align-self: center;
         width: 100%;
+    }
+
+    &__submit {
+        display: flex;
+        justify-content: center;
+        padding: 20px 0 12px 0;
     }
 }
 
